<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            android:text="@string/product_name"
            style="@style/CategoryStyle" />

        <!--Input product name field-->
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:id="@+id/edit_product_name"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            android:text="@string/product_price"
            style="@style/CategoryStyle"/>

        <!--Input product price field-->
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            android:text="@string/product_quantity"
            style="@style/CategoryStyle"/>

        <!--Input product quantity field-->
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_quantity"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            android:text="@string/product_supplier"
            style="@style/CategoryStyle"/>

        <!--Input supplier name field-->
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:id="@+id/edit_product_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            android:text="@string/product_supplier_phone"
            style="@style/CategoryStyle"/>

        <!--Input supplier phone number field-->
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:id="@+id/edit_product_supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

</LinearLayout>
